alignment problem fixed

--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -22,8 +22,8 @@
 }
 
 .header-logo {
-  width: 100%;
-  height: 100%;
+  width: 4.45 * 95px;
+  height: 95px;
   background: url('/i/logo2.jpg')  no-repeat;
   margin-left: 5%;
   display: block;
